--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -13,48 +13,71 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{你的大名}
+\name{韩杰}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{alexdhan@anche.no} \textperiodcentered\ 
+  \phone{(+86) 186-5161-8992} \textperiodcentered\ 
+%  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}
+}
  
 \section{\faGraduationCap\  教育背景}
-\datedsubsection{\textbf{上海交通大学}, 上海}{2013 -- 至今}
-\textit{在读硕士研究生}\ 信息与通信工程, 预计 2016 年 3 月毕业
-\datedsubsection{\textbf{西安电子科技大学}, 西安, 陕西}{2009 -- 2013}
-\textit{学士}\ 通信工程
+\datedsubsection{\textbf{东南大学}, 南京}{2016 -- 2020}
+\textit{学士}\ 计算机科学与技术
 
-\section{\faUsers\ 实习/项目经历}
-\datedsubsection{\textbf{黑科技公司} 上海}{2015年3月 -- 2015年5月}
-\role{实习}{经理: 高富帅}
-xxx后端开发
-\begin{itemize}
-  \item 实现了 xxx 特性
-  \item 后台资源占用率减少8\%
-  \item xxx
-\end{itemize}
-
-\datedsubsection{\textbf{分布式科学上网姿势}}{2014年6月 -- 至今}
-\role{Golang, Linux}{个人项目，和富帅糕合作开发}
+\section{\faUsers\ 项目经历}
+\datedsubsection{\textbf{脊髓可视化系统}}{2020年2月 -- 2020年6月}
+\role{Python}{毕业设计}
 \begin{onehalfspacing}
-分布式负载均衡科学上网姿势, https://github.com/cyfdecyf/cow
+设计一个可视化动物(犬科)脊髓的交互式系统。
 \begin{itemize}
-  \item 修复了连接未正常关闭导致文件描述符耗尽的 bug
-  \item 使用Chord 哈希 URL, 实现稳定可靠地分流
-  \item xxx (尽量使用量化的客观结果)
+  \item 开发一个脊髓可视化系统
+  \item 基于python的vtk移植库
+  \item 实现多视图联动及脊髓高亮等功能
 \end{itemize}
 \end{onehalfspacing}
 
-\datedsubsection{\textbf{\LaTeX\ 简历模板}}{2015 年5月 -- 至今}
-\role{\LaTeX, Python}{个人项目}
+\datedsubsection{\textbf{SOC系统}}{2019年10月 -- 2019年12月}
+\role{C, C++}{课程设计}
 \begin{onehalfspacing}
-优雅的 \LaTeX\ 简历模板, https://github.com/billryan/resume
+设计一个SOC系统，包括硬件及软件系统。
 \begin{itemize}
-  \item 容易定制和扩展
-  \item 完善的 Unicode 字体支持，使用 \XeLaTeX\ 编译
-  \item 支持 FontAwesome 4.5.0
+  \item 合作开发一个MIPS系统
+  \item 实现基于MIPS指令的CPU、编译器、汇编器、及高亮的IDE
+  \item 个人负责开发编译器，汇编器。
+\end{itemize}
+\end{onehalfspacing}
+
+\datedsubsection{\textbf{\LaTeX\ 校园在线系统}}{2018 年8月 -- 2018年9月}
+\role{Java}{课程项目}
+\begin{onehalfspacing}
+使用Java设计一个校园管理系统
+\begin{itemize}
+  \item 实现校园卡的充值、消费等操作。
+  \item 实现在线选课、退课等操作。
+  \item 实现图书馆的借书等操作。
+\end{itemize}
+\end{onehalfspacing}
+
+\section{\faUsers\ 实习经历}
+\datedsubsection{\textbf{东软集团} 南京}{2019年9月 -- 2019年9月}
+\role{实习员工}{程序开发}
+\begin{onehalfspacing}
+Java Web开发
+\begin{itemize}
+  \item 使用Java开发一个人事管理系统
+  \item 应用服务器使用tomcat
+\end{itemize}
+\end{onehalfspacing}
+
+\section{\faUsers\ 工作经历}
+\datedsubsection{\textbf{上海宝信软件股份有限公司} 上海}{2020年7月 -- 至今}
+\role{开发人员}{后端开发}
+\begin{onehalfspacing}
+C++/C\#开发
+\begin{itemize}
+  \item 负责开发及维护产销管理系统的生产合同模块
+  \item 使用C\#开发客户端画面
 \end{itemize}
 \end{onehalfspacing}
 
@@ -68,21 +91,20 @@ xxx后端开发
 \section{\faCogs\ IT 技能}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: C == Python > C++ > Java
-  \item 平台: Linux
-  \item 开发: xxx
+  \item 编程语言: C++ == C > Python > Java > Julia
+  \item 平台: Linux, Git, Vim
 \end{itemize}
 
-\section{\faHeartO\ 获奖情况}
-\datedline{\textit{第一名}, xxx 比赛}{2013 年6 月}
-\datedline{其他奖项}{2015}
+%\section{\faHeartO\ 获奖情况}
+%\datedline{\textit{第一名}, xxx 比赛}{2013 年6 月}
+%\datedline{其他奖项}{2015}
 
 \section{\faInfo\ 其他}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item 技术博客: http://blog.yours.me
-  \item GitHub: https://github.com/username
-  \item 语言: 英语 - 熟练(TOEFL xxx)
+  \item Blog: http://blog.johan.zone
+  \item GitHub: https://github.com/baddate
+  \item 语言: 英语 - 熟练
 \end{itemize}
 
 %% Reference
